<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
tools:context="com.example.android.zapatosapp.Principal"
tools:layout_editor_absoluteX="8dp"
tools:layout_editor_absoluteY="8dp">

    <TextView
        android:id="@+id/txttitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulo"
        android:textAlignment="center"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="36sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="42dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/numero"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/et_cantidad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number" />

    </LinearLayout>

    <TextView
        android:id="@+id/txtsexo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sexo"
        android:textAlignment="center"
        android:textSize="24sp" />

    <Spinner
        android:id="@+id/sp_sexo"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:entries="@array/sexo_array"
        android:visibility="visible" />

    <TextView
        android:id="@+id/txttipo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tipo_zapatos"
        android:textAlignment="center"
        android:textSize="24sp" />

    <Spinner
        android:id="@+id/sp_tipo"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:entries="@array/tipo_array"
        android:visibility="visible" />

    <TextView
        android:id="@+id/txtmarca"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/marca"
        android:textAlignment="center"
        android:textSize="24sp" />

    <Spinner
        android:id="@+id/sp_marca"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:entries="@array/marca_array"
        android:visibility="visible" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="calcular"
        android:text="@string/cotizar"
        android:textSize="36sp" />

    <EditText
        android:id="@+id/et_mostrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" />

</LinearLayout>